# gc-decomp

./: .gitignore  AGENTS.md  CLAUDE.md  PERMUTER.md  PLAN.md  README.md  check_overnight.sh  overnight-status.json  overnight.sh  pyproject.toml
config/: default.toml
docker/: Dockerfile  docker-compose.yml  mcp.json  squid.conf  system-prompt.md  worker-entrypoint.sh
docker/config/: container.toml
docs/: CAMPAIGN_MODE_DESIGN.md  CODEX_CONTAINER_DESIGN.md  CODEX_SPIKE_FINDINGS_2026-03-10.md  DOCKER.md  GC_DECOMP_ARCHITECTURE.md  GPT-5-4_fn_802590C4_2026-03-10.md  MNGALLERY_REMAINING_3.md  MN_MODULE_GUIDE.md  MWCC_COLORING_ANALYSIS.md  MWCC_RE_PLAN.md  NEXT_TARGETS.md  OVERNIGHT_CAMPAIGNS.md  PERMUTER.md  TUNING_DECISIONS.md  UNTOUCHED_FILES_PLAN.md  mnGallery_80259868_report.md
research/fn_802590C4/: byte_match.py  data_ud_decl_sweep.py  mega_test_round1.py  register_test.py  (+2 more)
scripts/: ExtractMWCCPasses.java  exhaustive_decl_order.py  ghidra_extract_passes.py  launch_mnsnap_campaign.sh  overnight_permuter.py  run_parallel.py
tests/: test_campaign.py  test_campaign_ipc.py  test_campaign_orchestrator.py  test_cli_campaign.py  test_codex_bootstrap.py  test_codex_headless.py  test_cost.py  test_ctx_filter.py  test_db_artifacts.py  test_disasm.py  test_e2e.py  test_headless.py  test_headless_context.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_runner_isolated_patch.py  test_worker_launcher.py  test_worker_results.py
web-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+93 files in other folders)
