[project]
name = "decomp-agent"
version = "0.1.0"
description = "Automated decompilation agent for Super Smash Bros. Melee"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "sqlmodel>=0.0.16",
    "click>=8.0",
    "rich>=13.0",
    "structlog>=24.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
]

[project.scripts]
decomp-agent = "decomp_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decomp_agent"]
